Skip pushing invalidation sets inside subtree changes.

We already skipped pushing invalidation sets for InvalidateChildren, but
InvalidateShadowRootChildren() didn't have this check causing a DCHECK
failure in StyleInvalidator::Invalidate().

Bug: 809270
Change-Id: Id4634be04a036b5056567d581f8a1c5cc630d88c
Reviewed-on: https://chromium-review.googlesource.com/908751
Commit-Queue: Eric Willigers <ericwilligers@chromium.org>
Reviewed-by: Eric Willigers <ericwilligers@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535610}
Former-commit-id: d95b0a5c782b9f4ef93b3b062beb1a888960819e